--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet-async": "^1.2.2",
     "react-on-rails": "11.3.0",
     "react-router-dom": "^6.2.1",
     "turbolinks": "^5.2.0"
