--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "newco_site",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.8.3",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@babel/preset-react": "^7.18.6",
+    "@rails/actioncable": "^6.1.7",
+    "@rails/activestorage": "^6.1.7",
+    "@rails/ujs": "^6.1.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "cursor-dot": "^1.0.4",
-    "jquery": "^3.4.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet-async": "^1.2.2",
+    "cursor-dot": "^1.0.5",
+    "jquery": "^3.6.1",
+    "prop-types": "^15.8.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet-async": "^1.3.0",
     "react-on-rails": "11.3.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.3.0",
+    "shakapacker": "^6.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.3"
   }
 }
