--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "newco_site",
+  "name": "app",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "@rails/actioncable": "^6.1.7",
-    "@rails/activestorage": "^6.1.7",
-    "@rails/ujs": "^6.1.7",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "cursor-dot": "^1.0.5",
-    "jquery": "^3.6.1",
-    "prop-types": "^15.8.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet-async": "^1.3.0",
-    "react-on-rails": "11.3.0",
-    "react-router-dom": "^6.3.0",
-    "shakapacker": "^6.0.0",
-    "turbolinks": "^5.2.0"
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/runtime": "^7.19.0",
+    "babel-loader": "^8.2.5",
+    "compression-webpack-plugin": "^9.2.0",
+    "pnp-webpack-plugin": "1",
+    "shakapacker": "^6.0.0-rc.14",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.74.0",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-sources": "^3.2.3"
   },
   "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/shakapacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.11.0"
   }
 }
