--- a/package.json
+++ b/package.json
@@ -5,11 +5,25 @@
     "@babel/core": "^7.19.0",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.19.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^9.2.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.1.0",
+    "jquery": "^3.6.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "pnp-webpack-plugin": "1",
-    "shakapacker": "^6.0.0-rc.14",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-on-rails": "13.1.0",
+    "react-router-dom": "^6.3.0",
+    "shakapacker": "^6.5.1",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-assets-manifest": "^5.1.0",
@@ -27,6 +41,8 @@
     "defaults"
   ],
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "react-refresh": "^0.14.0",
     "webpack-dev-server": "^4.11.0"
   }
 }
