replace npm with yarn

--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "react-refresh": "^0.14.0",
     "webpack-dev-server": "^4.11.0"
+  },
+  "engines": {
+    "node": "16.17.0",
+    "yarn": "1.22.17"
   }
 }
